--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 Im  梁孝瑞！ from wzvtc
-<img src="1.jpg" width="300" height="300" alt="ailian">
+<img src="1.jpg"  id="ailian">
 </body>
 </html>
