--- a/index.html
+++ b/index.html
@@ -2,5 +2,19 @@
 <body>
 Im  梁孝瑞！ from wzvtc
 <img src="1.jpg"  id="logo">
+<script src="jquery.min.js"></script>
+<script src="jssor.slider.min.js"></script>
+<script>
+    jQuery(document).ready(function ($) {
+        var options = { $AutoPlay: 1 };
+        var jssor1_slider = new $JssorSlider$("jssor_1", options);
+    });
+</script>
+<div id="jssor_1" style="position:relative;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+    <div data-u="slides" style="position:absolute;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+        <div><img data-u="image" src="2.jpg" /></div>
+        <div><img data-u="image" src="3.jpg" /></div>
+    </div>
+</div>
 </body>
 </html>
