--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 Im  梁孝瑞！ from wzvtc
 <img src="1.jpg"  id="logo">
-<script src="jquery.min.js"></script>
+<script src="jquery-3.4.1.js"></script>
 <script src="jssor.slider.min.js"></script>
 <script>
     jQuery(document).ready(function ($) {
