--- a/2.html
+++ b/2.html
@@ -30,14 +30,8 @@ var data=[
     ,{name:'大学英语',credit:2}
     ,{name:'软件技术导论',credit:2}
 ];
-console.log(
-    reduce(
-        data,
-        function(a,b){
-        return a<b.credit?a:b.credit;
-    }
-    ,10)
-);
+console.log(max(data));
+
 
 
 
