--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
+
 <html>
     <body>
         <script src="./stat.js"></script>
+        <script src="./underscore.js"></script>
         <script>
 
 
@@ -14,11 +16,9 @@ var data=[
     ,{name:'软件技术导论',credit:2}
 ];
 console.log(my.max(data));
-
-
+console.log(_.max(data,function(it){return it.credit}));
 
 
         </script>
 
     </body>
-</html>
