--- a/test.html
+++ b/test.html
@@ -1,24 +1,15 @@
+<script>
+    var value=11;
+    var initvalue=22;
+    function addtion(){
+        var value=initvalue;
+        return function add(x){
+            value=value+x;
+           if(value>55){console.log(value);} 
+        };
+    }
+    var func=addtion();
+    func(33);
+    func(44);
 
-<html>
-    <body>
-        <script src="./stat.js"></script>
-        <script src="./underscore.js"></script>
-        <script>
-
-
-var reduce=3;
-
-var data=[
-    {name:'计算机安装与维护',credit:2}
-    ,{name:'静态网页制作',credit:2}
-    ,{name:'计算机编程基础',credit:4}
-    ,{name:'大学英语',credit:2}
-    ,{name:'软件技术导论',credit:2}
-];
-console.log(my.max(data));
-console.log(_.max(data,function(it){return it.credit}));
-
-
-        </script>
-
-    </body>
+    </script>
